[package]
name = "dezoomify-rs"
version = "2.9.2"
authors = ["lovasoa"]
edition = "2018"
license-file = "LICENSE"
description = "Allows downloading zoomable images. Supports several different formats such as zoomify, iiif, and deep zoom images."
documentation = "https://docs.rs/dezoomify-rs"
repository = "https://github.com/lovasoa/dezoomify-rs"
homepage = "https://lovasoa.github.io/dezoomify-rs/"
readme = "README.md"
keywords = ["image", "download"]

[dependencies]
image = "0.24"
png = "0.17"
reqwest = { version = "0.11", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
custom_error = "1.7"
structopt = "0.3"
evalexpr = "8"
regex = "1"
lazy_static = "1.3"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-xml-rs = "0.6"
serde_json = "1.0"
json5 = "0.4"
serde_urlencoded = "0.7"
aes = "0.8.1"
cbc = "0.1.2"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.13"
indicatif = "0.17"
sanitize-filename-reader-friendly = "2"
colour = "0.6"
human-panic = "1"
log = "0.4"
env_logger = "0.9"
url = "2"
fixedbitset = "0.4"

[dev-dependencies]
criterion = "0.4"
image_hasher = "1"
tempdir = "0.3"

[[bench]]
name = "local_dezoomifying"
harness = false
