[package]
name = "dezoomify-rs"
version = "2.13.0"
authors = ["lovasoa"]
edition = "2021"
license-file = "LICENSE"
description = "Allows downloading zoomable images. Supports several different formats such as zoomify, iiif, and deep zoom images."
documentation = "https://docs.rs/dezoomify-rs"
repository = "https://github.com/lovasoa/dezoomify-rs"
homepage = "https://lovasoa.github.io/dezoomify-rs/"
readme = "README.md"
keywords = ["image", "download"]

[dependencies]
image = "0.24"
png = "0.17"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
custom_error = "1.7"
clap = { version = "4.4.6", features = ["derive"] }
evalexpr = "11"
regex = "1"
lazy_static = "1.4"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-xml-rs = "0.6"
serde_json = "1.0"
json5 = "0.4"
serde_urlencoded = "0.7"
aes = "0.8.1"
cbc = "0.1.2"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.22"
indicatif = "0.17"
sanitize-filename-reader-friendly = "2"
colour = "2.1"
human-panic = "2"
log = "0.4"
env_logger = "0.11"
url = "2"
fixedbitset = "0.5"

# See https://github.com/lovasoa/dezoomify-rs/issues/191
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", features = ["gzip", "zstd", "rustls-tls-native-roots"], default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12", features = ["gzip"] }

[dev-dependencies]
criterion = "0.5"
image_hasher = "1"
tempdir = "0.3"

[[bench]]
name = "local_dezoomifying"
harness = false
